src/test/ui/issues/issue-17385.stderr
error[E0382]: use of moved value: `foo`
  --> $DIR/issue-17385.rs:18:11
   |
LL |     drop(foo);
   |          --- value moved here
LL |     match foo {
   |           ^^^ value used here after move
   |
   = note: move occurs because `foo` has type `X`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `e`
  --> $DIR/issue-17385.rs:25:11
   |
LL |     drop(e);
   |          - value moved here
LL |     match e {
   |           ^ value used here after move
   |
   = note: move occurs because `e` has type `Enum`, which does not implement the `Copy` trait

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0382`.
